# sqez

./: .gitignore  FairRWLock.tla  FairRWLockProofs.tla  LICENSE  Makefile  Phaser.tla  README.md  pyproject.toml  sqez.py  test.py  test_strict_serializability.py  typecheck.sh
designs/: FairRWLockProofs.tla
src/sqez/: __init__.py
tests/: test_basics.py  test_strict_serializability.py
