[project]
name = "sqez"
version = "1.0.0"
authors = [
  { name="Calvin Loncaric", email="c.a.loncaric@gmail.com" },
]
description = "Thin thread-safe wrapper around sqlite3"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Calvin-L/sqez"
Issues = "https://github.com/Calvin-L/sqez/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
