[project]
name = "sqez"
version = "1.0.0"
authors = [
  { name="Calvin Loncaric", email="c.a.loncaric@gmail.com" },
]
description = "Thin thread-safe wrapper around sqlite3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Calvin-L/sqez"
Issues = "https://github.com/Calvin-L/sqez/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
  "/src",
  "/tests",
  "/designs/*.tla",
  "/Makefile",

  # hatchling includes these by default [1], but let's be explicit
  # [1]: https://hatch.pypa.io/1.12/plugins/builder/sdist/#default-file-selection
  "/pyproject.toml",
  "/README.md",
  "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
strict = true
